# errguard

./: README.md  main.py  pyproject.toml  test.py
errGuard/: __init__.py  errDecorator.py  tools.py
pyadorn/: errConfig.py  errDecorator.py  tools.py
test/: test_error.py
