[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadorn"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
]

[tool.setuptools.dynamic]
version = { attr = "pyadorn.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pyadorn*"]
